--- a/Ques2/.project
+++ b/Ques2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Jdbc_Solution2</name>
+	<name>Ques2</name>
 	<comment></comment>
 	<projects>
 	</projects>
